--- a/src/app/shared/components/hero/hero.component.html
+++ b/src/app/shared/components/hero/hero.component.html
@@ -21,17 +21,25 @@
       <div class="text-center lg:text-left max-w-2xl">
         <!-- Animated greeting -->
         <div class="mb-4">
-          <span class="text-lg text-accent font-semibold animate-fade-in"> {{ 'hero.greeting' | translate }}</span>
+
+
+          <span class="wobble-hor-bottom text-lg text-accent font-semibold">
+            <span class="wobble-hor-bottom inline-block text-lg text-accent font-semibold">
+              👋
+            </span>
+            {{
+            'hero.greeting' |
+            translate }}</span>
         </div>
 
         <!-- Main title with gradient -->
-        <h1 class="text-4xl lg:text-6xl text-primary font-bold mb-4" >
+        <h1 class="text-4xl lg:text-6xl text-primary font-bold mb-4">
           {{ 'hero.name' | translate }}
         </h1>
 
         <!-- Subtitle with typing effect -->
         <div class="py-6 text-xl lg:text-2xl text-base-content/80">
-          <span class="font-semibold text-accent" >Full Stack Developer</span>
+          <span class="font-semibold text-accent">Full Stack Developer</span>
           <div class="text-base mt-2 opacity-75">
             {{ 'hero.specialties.text' | translate }}<span class="text-accent font-semibold"> Angular</span> &
             <span class="text-accent font-semibold">Node.js</span>
@@ -79,13 +87,13 @@
     </div>
   </div>
 
-<div class="text-primary">
-  <svg id="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"
-       class="absolute bottom-0 left-0 w-full z-0">
-    <path id="wavePath" fill="currentColor" fill-opacity="0.5"
-          d="M0,288L40,272C80,256,160,224,240,208C320,192,400,192,480,197.3C560,203,640,213,720,202.7C800,192,880,160,960,128C1040,96,1120,64,1200,58.7C1280,53,1360,75,1400,85.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
-    </path>
-  </svg>
-</div>
+  <div class="text-primary">
+    <svg id="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"
+      class="absolute bottom-0 left-0 w-full z-0">
+      <path id="wavePath" fill="currentColor" fill-opacity="0.5"
+        d="M0,288L40,272C80,256,160,224,240,208C320,192,400,192,480,197.3C560,203,640,213,720,202.7C800,192,880,160,960,128C1040,96,1120,64,1200,58.7C1280,53,1360,75,1400,85.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+      </path>
+    </svg>
+  </div>
 
 </div>
