--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,39 @@
   }
 }
 
+@keyframes wobble-hor-bottom {
+
+  0%,
+  100% {
+    transform: translateX(0%) rotate(0deg);
+    transform-origin: 50% 50%;
+  }
+
+  15% {
+    transform: translateX(-10px) rotate(-3deg);
+  }
+
+  30% {
+    transform: translateX(6px) rotate(3deg);
+  }
+
+  45% {
+    transform: translateX(-4px) rotate(-2deg);
+  }
+
+  60% {
+    transform: translateX(3px) rotate(1.5deg);
+  }
+
+  75% {
+    transform: translateX(-2px) rotate(-1deg);
+  }
+}
+
+.wobble-hor-bottom {
+  animation: wobble-hor-bottom 1.5s infinite;
+}
+
 html {
   scroll-behavior: smooth;
 }
