--- a/src/app/shared/pages/home-page/home-page.component.html
+++ b/src/app/shared/pages/home-page/home-page.component.html
@@ -3,22 +3,24 @@
 <section id="hero">
   <app-hero></app-hero>
 </section>
+<div class="mx-0 md:mx-8 lg:mx-16 xl:mx-24">
+  <section id="skills">
+    <app-skills></app-skills>
+  </section>
 
-<section id="skills">
-  <app-skills></app-skills>
-</section>
+  <section id="experience">
+    <app-timeline></app-timeline>
+  </section>
 
-<section id="experience">
-  <app-timeline></app-timeline>
-</section>
+  <section id="projects">
+    <app-proyects></app-proyects>
+  </section>
 
-<section id="projects">
-  <app-proyects></app-proyects>
-</section>
+  <section id="faq">
+    <app-frequently-asked></app-frequently-asked>
+  </section>
+</div>
 
-<section id="faq">
-  <app-frequently-asked></app-frequently-asked>
-</section>
 
 <!-- <section>
   <app-resources></app-resources>
