--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -32,6 +32,7 @@
             | translate}}</a>
         </li>
         <!-- Cambio de idioma -->
+        <!-- TODO No funciona en mobile -->
         <li>
           <div>
             @if(this.isTranslationLoaded()){
