--- a/src/app/shared/components/hero/hero.component.html
+++ b/src/app/shared/components/hero/hero.component.html
@@ -1,7 +1,8 @@
 <div class="hero min-h-screen relative">
   <div class="hero-content flex-col lg:flex-row-reverse max-w-7xl mx-auto z-10">
 
-    <div class="flex-1 flex justify-center lg:justify-end">
+    <div data-aos="fade-left" class="flex-1 flex justify-center lg:justify-end">
+
       <svg class="w-full max-w-md animate-[gentle-move_5s_infinite]" viewBox="0 0 200 200"
         xmlns="http://www.w3.org/2000/svg">
         <defs>
@@ -11,13 +12,16 @@
               transform="translate(100 100)" />
           </clipPath>
         </defs>
-
+        @defer (on viewport) {
         <image clip-path="url(#blobShape)" href="assets/miguel.png" width="200" height="200"
-          preserveAspectRatio="xMidYMid slice" />
+          preserveAspectRatio="xMidYMid slice" (load)="onHeroImageLoaded()" />
+        } @placeholder {
+        <rect width="200" height="200" fill="#ccc" clip-path="url(#blobShape)" />
+        }
       </svg>
     </div>
 
-    <div class="flex-1">
+    <div data-aos="fade-right" class="flex-1">
       <div class="text-center lg:text-left max-w-2xl">
         <!-- Animated greeting -->
         <div class="mb-4">
