--- a/src/app/shared/pages/home-page/home-page.component.html
+++ b/src/app/shared/pages/home-page/home-page.component.html
@@ -18,9 +18,14 @@
     <app-proyects></app-proyects>
   </section>
 
+  <!-- <section id="contact">
+    <app-contact></app-contact>
+  </section> -->
+
   <section id="faq">
     <app-frequently-asked></app-frequently-asked>
   </section>
+
 </div>
 
 <section>
