--- a/src/app/shared/components/proyects/proyect/proyect.component.html
+++ b/src/app/shared/components/proyects/proyect/proyect.component.html
@@ -1,11 +1,10 @@
-<div
-    class="card bg-base-100 shadow-sm hover:shadow-xl transition-shadow duration-300 min-h-[450px] w-full sm:min-w-[400px] h-full">
-    <figure class="px-4 pt-4 overflow-hidden">
+<div class="card bg-base-100 shadow-sm hover:shadow-xl transition-shadow duration-300 h-full flex flex-col">
+    <figure class="px-4 pt-4 overflow-hidden flex-shrink-0">
         <img [src]="project.image" [alt]="project.title" 
-             class="rounded-xl h-48 w-full object-cover transition-transform duration-300 hover:scale-110" />
+             class="rounded-xl w-full h-48 object-cover transition-transform duration-300 hover:scale-110" />
     </figure>
 
-    <div class="card-body">
+    <div class="card-body flex-grow flex flex-col">
         <h2 class="card-title">
             {{ project.title }}
         </h2>
@@ -18,7 +17,7 @@
             }
         </div>
 
-        <div class="card-actions justify-end mt-2">
+        <div class="card-actions justify-end mt-auto pt-4">
             @if (project.demoUrl) {
             <a [href]="project.demoUrl" target="_blank" class="btn btn-primary btn-sm">Demo</a>
             }
