--- a/src/app/shared/components/skills/skills.component.html
+++ b/src/app/shared/components/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="w-full overflow-hidden px-4">
+<div class="w-full overflow-hidden px-2 pb-10">
   <div class="max-w-6xl mx-auto">
     <h1 class="text-3xl font-bold text-center mb-6 mt-8">Skills</h1>
 
