--- a/src/styles.css
+++ b/src/styles.css
@@ -55,3 +55,29 @@
 html {
   scroll-behavior: smooth;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  /* Color azul similar al de la imagen */
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+
+  /* Color azul similar al de la imagen */
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: hsl(var(--p));
+}
+
+/* Para Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var();
+}
